Replace puppeteer with puppeteer-core in dependencies

--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "cors": "^2.8.6",
     "csv-writer": "^1.6.0",
     "express": "^5.2.1",
-    "puppeteer": "^24.37.2"
+    "puppeteer-core": "^24.37.2"
   }
 }
