--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "npx puppeteer browsers install chrome"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
